Adding Disqus widget for comments and continued drafting first post

--- a/profile.html
+++ b/profile.html
@@ -5,5 +5,8 @@ title: Profile
 
 <div id="home">
   <h1>Profile</h1>
+  <p>
+    James is a Solution Architect based in Melbourne, Australia. 
+  </p>
 
 </div>
