--- a/blog.html
+++ b/blog.html
@@ -3,14 +3,14 @@ layout: default
 title: Solution Architecture Blog
 ---
 
-<div id="home">
+<div id="blog">
   <h1>Blog</h1>
   {% for post in site.posts %}
     <div class="card w-100">
       <div class="card-block">
         <h4 class="card-title">{{ post.title }}</h4>
         <h6 class="card-subtitle mb-2 text-muted">{{ post.date | date_to_string }}</h6>
-        <p class="card-text">{{ post.excerpt }}</p>
+        <div class="card-text">{{ post.excerpt }}</div>
         <a href="{{ site.baseurl }}{{ post.url }}" class="card-link">Read more</a>
       </div>
     </div>
